--- a/css/estitilos.css
+++ b/css/estitilos.css
@@ -50,7 +50,7 @@ hr{
 
 header,footer{
     background-color: #161F30;
-    padding: 10%;
+    padding: 8%;
 }
 
 h1,h2,h3,h4,ul{
@@ -67,6 +67,7 @@ a{
     color: white;
     font-size: 1,5em;
     font-style: italic;
+    margin-botton: 2%;
 }
 
 a.botao{
